--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
         "format": "prettier --write \"src/**/*.ts\""
     },
     "dependencies": {
+        "@joi/date": "^2.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "joi": "^17.13.3",
         "prettier": "^3.3.3"
     },
     "devDependencies": {
