--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     },
     "dependencies": {
         "@joi/date": "^2.1.1",
+        "@types/basic-auth": "^1.1.8",
+        "basic-auth": "^2.0.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
