--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "joi": "^17.13.3",
+        "mongodb": "^6.8.0",
         "prettier": "^3.3.3"
     },
     "devDependencies": {
