--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "dependencies": {
         "@joi/date": "^2.1.1",
         "@types/basic-auth": "^1.1.8",
+        "@types/bcryptjs": "^2.4.6",
         "basic-auth": "^2.0.1",
+        "bcrypt": "^5.1.1",
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
