--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@joi/date": "^2.1.1",
         "@types/basic-auth": "^1.1.8",
         "@types/bcryptjs": "^2.4.6",
+        "@types/jsonwebtoken": "^9.0.6",
         "basic-auth": "^2.0.1",
         "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
@@ -24,6 +25,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "joi": "^17.13.3",
+        "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.8.0",
         "prettier": "^3.3.3"
     },
