--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "scripts": {
         "watch": "tsc -w",
         "start": "yarn nodemon src/index.ts",
+        "start:local": "docker-compose up -d",
         "dev": "yarn nodemon --inspect dist/index.ts",
         "jest": "jest -i",
         "jest:coverage": "jest -i --coverage",
