--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,33 @@
 version: "3.1"
 
 services:
-  mongo:
-    image: mongo
-    restart: always
-    container_name: mongo
-    ports:
-      - 27017:27017
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: alex
-      MONGO_INITDB_ROOT_PASSWORD: alex
-    volumes:
-      - ./db_data/:/data/db/
+    # server:
+    #     build:
+    #         context: .
+    #         dockerfile: Dockerfile
+    #     restart: always
+    #     ports:
+    #         - "3003:3003"
+
+    #     env_file:
+    #         - .env
+
+    #     environment:
+    #         - MONGO_URL=${MONGO_URL}
+    #         - SECRET_ACCESS_TOKEN_KEY=${SECRET_ACCESS_TOKEN_KEY}
+    #         - DB_NAME=${DB_NAME}
+    #         - PORT=${PORT}
+
+    #     depends_on:
+    #         - mongo
+    mongo:
+        image: mongo
+        restart: always
+        container_name: mongo
+        ports:
+            - "27017:27017"
+        environment:
+            MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+            MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+        volumes:
+            - ./db_data:/data/db
