--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
         "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
+        "date-fns": "^4.1.0",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "express-rate-limit": "^7.4.0",
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.8.0",
+        "nodemailer": "^6.9.15",
         "prettier": "^3.3.3"
     },
     "devDependencies": {
@@ -36,6 +38,7 @@
         "@types/express": "^4.17.21",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.14.11",
+        "@types/nodemailer": "^6.4.16",
         "@types/supertest": "^6.0.2",
         "jest": "^29.7.0",
         "nodemon": "^3.1.4",
