--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "basic-auth": "^2.0.1",
         "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "crypto": "^1.0.1",
         "date-fns": "^4.1.0",
@@ -36,6 +37,7 @@
         "prettier": "^3.3.3"
     },
     "devDependencies": {
+        "@types/cookie-parser": "^1.4.7",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/jest": "^29.5.12",
