--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
         "date-fns": "^4.1.0",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
-        "express-rate-limit": "^7.4.0",
+        "express-rate-limit": "^7.4.1",
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.8.0",
         "nodemailer": "^6.9.15",
-        "prettier": "^3.3.3"
+        "prettier": "^3.3.3",
+        "uuid": "^11.0.2"
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.7",
